# First-order-Kuramoto-1

./: .gitignore  CMakeLists.txt  README.md  kuramoto  main.py
include/: finite_difference.h  plot.h  save.h
plot/: plotting.py
saved_data/: a  aaa  accio3lavendetta  b  c  firstTest  secondTest  thirdTest
simulation_engine/include/: finite_difference.h  initial_conditions.h  order_parameter.h  parameters.h  save.h
simulation_engine/src/: main.cpp
simulation_engine/src/io/: save.cpp
simulation_engine/src/numerical_scheme/: finite_difference.cpp  order_parameter.cpp
simulation_engine/src/simulation_parameters/: initial_conditions.cpp  parameters.cpp
src/: main.cpp
src/io/: save.cpp
src/plot/: plot.cpp
src/plot/gnuplot/: README-Windows.txt
src/plot/gnuplot/demo/: Makefile.am  Makefile.in  Makefile.in.bak  longfile.rexx  patch.lst  rename.lst
src/plot/gnuplot/demo/plugin/: Makefile.in
src/simulation_parameters/: initial_conditions.cpp
